--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^15.0.3",
     "@hookform/resolvers": "^5.2.2",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-navigation/bottom-tabs": "^6.5.20",
@@ -27,8 +28,13 @@
     "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-svg": "^15.15.1",
+    "react-native-svg-transformer": "^1.5.2",
     "typescript": "~5.9.2",
     "zod": "^3.23.8",
     "zustand": "^4.5.5"
+  },
+  "devDependencies": {
+    "@types/expo__vector-icons": "^9.0.1"
   }
 }
