--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/raleway": "^0.4.2",
     "@expo/vector-icons": "^15.0.3",
     "@hookform/resolvers": "^5.2.2",
     "@react-native-async-storage/async-storage": "2.2.0",
@@ -21,6 +22,7 @@
     "@types/react": "~19.1.10",
     "dayjs": "^1.11.13",
     "expo": "^54.0.30",
+    "expo-font": "~14.0.10",
     "expo-secure-store": "~15.0.8",
     "react": "19.1.0",
     "react-hook-form": "^7.51.5",
