--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "19.1.0",
     "react-hook-form": "^7.51.5",
     "react-native": "0.81.5",
+    "react-native-calendars": "^1.1314.0",
     "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
