--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@types/react": "~19.1.10",
     "dayjs": "^1.11.13",
     "expo": "^54.0.30",
+    "expo-asset": "~12.0.12",
     "expo-font": "~14.0.10",
+    "expo-keep-awake": "~15.0.8",
     "expo-secure-store": "~15.0.8",
     "react": "19.1.0",
     "react-hook-form": "^7.51.5",
